[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [ "memilio", "memilio.epidata", "memilio.epidata_test"]

[project]
name = "memilio-epidata"
version = "1.0.0"
readme = "README.rst"
authors = [{name = "DLR-SC", email = "daniel.abele@dlr.de"}]
maintainers = [{email = "martin.kuehn@dlr.de"}]
description = "Part of MEmilio project, reads epidemiological data from different official and unofficial sources."
requires-python = ">=3.8"
dependencies = [
     # pandas 2.0 is minimum for CoW
    "pandas>=2.0.0",
    # FutureWarning of pandas that pyarrow will be required in a future release
    "pyarrow",
    "matplotlib",
    "tables",
    # smaller numpy versions cause a security issue, 1.25 breaks testing with pyfakefs
    "numpy>=1.22,<1.25",
    "openpyxl",
    "xlrd",
    "xlsxwriter",
    "requests",
    "pyxlsb",
    "wget",
    "twill==3.1",
    "PyQt6",
    "python-calamine",
    "python-magic-bin; sys_platform == 'win32'",
    "python-magic; sys_platform != 'win32'"
]

[project.optional-dependencies]
dev = [
            # first support of python 3.11 4.6
            # 5.3.4 has conflicts with openpyxl
            # 5.3.3 broken
            "pyfakefs>=4.6,<5.3.3",
            # coverage 7.0.0 can't find .whl files and breaks CI
            "coverage>=7.0.1",
            # pylint 2.16 creates problem with wrapt package version
            "pylint>=2.13.0,<2.16",
            "pylint_json2html==0.4.0",
        ]

[project.urls] 
Repository = "https://github.com/SciCompMod/memilio"
Issues = "https://github.com/SciCompMod/memilio/issues"

[project.scripts]
getcasedata = "memilio.epidata.getCaseData:main"
getpopuldata = "memilio.epidata.getPopulationData:main"
getjhdata = "memilio.epidata.getJHData:main"
getdividata = "memilio.epidata.getDIVIData:main"
getsimdata = "memilio.epidata.getSimulationData:main"
cleandata = "memilio.epidata.cleanData:main"
getcommutermobility = "memilio.epidata.getCommuterMobility:main"
getvaccinationdata = "memilio.epidata.getVaccinationData:main"
gethospitalizationdata = "memilio.epidata.getHospitalizationData:main"
memiliopylint = "memilio.custom_pylint:main"